--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <p>在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</p>
 
-    <img src="C:/Users/Lenovo/Desktop">
+    <img src="">
 
     <p>浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</p>
 
