--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</p>
 
     <p>爱欲之人犹如执炬逆风而行，必有灼手之患 --江南 《龙族》</p>
-    <img src="">
+    <img src="shiyu145.github.io/微信图片_20201008183847.jpg">
     <p>总有一些孤独，曾在我们左右；也总有一些孤独，离我们远去，让我们无从寻觅。一切都过去了，是的。阳光里，不会再有天使低下头来，亲吻你的脸。 --江南 《龙族》</p>
 
     <p>要活下去啊，哥哥，生命是我们拥有的……一切了！ --江南 《龙族》</p>
