--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="utf-8"/>
 
     <title>龙族语录大全--李适宇的第一个网站</title>
-
+    
+    <link rel="stylesheet" type="text/css" href="格式.css">
   </head>
 
   
