--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
 
     
 
-    <p>在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</p>
+    <p class="1">在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</p>
 
 
 
-    <img src="shiyu145.github.io/微信图片_20201005203719.jpg">
+    <img src="shiyu145.github.io/微信图片_20201005203719.jpg" class="1">
 
 
 
-    <p>浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</p>
+    <p class="1">浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</p>
 
 
 
-    <p>爱欲之人犹如执炬逆风而行，必有灼手之患 --江南 《龙族》</p>
+    <p class="1">爱欲之人犹如执炬逆风而行，必有灼手之患 --江南 《龙族》</p>
 
-    <img src="shiyu145.github.io/微信图片_20201008183847.jpg">
+    <img src="shiyu145.github.io/微信图片_20201008183847.jpg" class="1">
 
-    <p>总有一些孤独，曾在我们左右；也总有一些孤独，离我们远去，让我们无从寻觅。一切都过去了，是的。阳光里，不会再有天使低下头来，亲吻你的脸。 --江南 《龙族》</p>
-
-
-
-    <p>要活下去啊，哥哥，生命是我们拥有的……一切了！ --江南 《龙族》</p>
-
-
-  <h1>啊这</h1>
-
-  <h2>为了我的学业，我先进行自我介绍</h2>
-
-
-  <h5>有缘千里来相会，正在看我的网站的人，大家好。我是李适宇，来自北京大学（能和江南同一所大学，我很骄傲）。我毕业于河南商城高中，一个地道的农村中学，其实这也是我第一次接触编程，感觉还是挺有意思的。</h5>
-
-    <p>话说我为什么先在上面写上龙族语录呢？《龙族》这本书陪伴了我整个高中，其中的一些角色、话语一直在不断的激励着我前进，尤其是在最为困难的高三时期，我一直也在心中期待着那道光能照进我的心房。“你已经手握刀剑，那就准备战斗”······那些话语依旧历历在目。这也算是我的个人爱好吧。我希望能够将上面的龙族语录真正的大全，将那些让我激动人心的话语分享给大家。</p>
+    <p class="1">总有一些孤独，曾在我们左右；也总有一些孤独，离我们远去，让我们无从寻觅。一切都过去了，是的。阳光里，不会再有天使低下头来，亲吻你的脸。 --江南 《龙族》</p>
 
 
 
-    <h1>                                       再见</h1>
+    <p class="1">要活下去啊，哥哥，生命是我们拥有的……一切了！ --江南 《龙族》</p>
+
+
+  <h1 class="1">啊这</h1>
+
+  <h2 class="1">为了我的学业，我先进行自我介绍</h2>
+
+
+  <h5 class="1">有缘千里来相会，正在看我的网站的人，大家好。我是李适宇，来自北京大学（能和江南同一所大学，我很骄傲）。我毕业于河南商城高中，一个地道的农村中学，其实这也是我第一次接触编程，感觉还是挺有意思的。</h5>
+
+    <p class="1">话说我为什么先在上面写上龙族语录呢？《龙族》这本书陪伴了我整个高中，其中的一些角色、话语一直在不断的激励着我前进，尤其是在最为困难的高三时期，我一直也在心中期待着那道光能照进我的心房。“你已经手握刀剑，那就准备战斗”······那些话语依旧历历在目。这也算是我的个人爱好吧。我希望能够将上面的龙族语录真正的大全，将那些让我激动人心的话语分享给大家。</p>
+
+
+
+    <h1 class="1">                                       再见</h1>
 
 
 
