--- a/index.html
+++ b/index.html
@@ -1,61 +1,150 @@
 <!DOCTYPE html>
-
 <html lang="zh-cn">
-
   <head>
-
     <meta charset="utf-8"/>
-
-    <title>龙族语录大全--李适宇的第一个网站</title>
-    
-    <link rel="stylesheet" type="text/css" href="格式.css">
+    <title>龙族简介——李适宇的第一个网页</title>
+    <link rel="stylesheet" href="style.css">
   </head>
+  <body><p class="p1">你现在正在看的是李适宇制作的第一个网页，在这里，我推荐一本书分享给大家。现在欢迎来到龙族的世界，在此你将开启传奇之旅</p>
+   
+    <h2>龙族--不屈之路</h2>
+    <div class="box0">
+   1 <a href="#one">龙族简介</a>
 
-  
-  <body bg-color='rgb(137,190,178)' text-align='center'>
+   2 <a href="#two">龙族语录精选</a>
 
-    
+   3 <a href="#three">龙族人物介绍</a>
 
-    <p class="1">在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</p>
+   4 <a href="#four">读者评价</a>
+    </div>
+   <h3 id="one">龙族简介</h3>
+   <p class="img5">
+    <img src="C:\Users\Lenovo\Desktop\web\9e3df8dcd100baa1038687f44610b912c9fc2ed3.jpg">
+    </p>
+    <div class="box">
+    <p>《龙族》是作家江南创作的系列长篇魔幻小说，由《龙族Ⅰ火之晨曦》、《龙族Ⅱ悼亡者之瞳》、《龙族Ⅲ黑月之潮》、《龙族Ⅳ奥丁之渊》，《龙族Ⅴ：悼亡者的归来》组成，2009年10月1日开始在小说绘上连载，第一部于2010年04月首次出版，第二部于2011年05月出版，第三部上篇于2012年12月出版，第三部中篇于2013年07月出版，第三部下篇于2013年12月出版，第四部则于2015年10月出版，第五部于2018年5月15日在QQ阅读平台开始连载   。</p>
+      <p>作品讲叙了少年路明非在申请国外大学时收到了来自芝加哥远郊处的一所私立大学：卡塞尔学院的邀请函，随着路明非同学坐上去往芝加哥的CC1000次列车，踏上了与龙族争锋的征程。</p>
+    <p> 江南个人更喜欢史诗奇幻。其本人喜欢读历史，看了《魔戒》以后启发了江南写中国化的史诗奇幻的想法。江南觉得中国古代的素材很多，可以写进故事里对写作者的能力也是有要求的。读者发现它和现实有联系，但又和现实中的故事不一样，便有了《龙族》。</p>
+    <p> 史诗奇幻很考验作者的控制力。江南要考虑得很细致，比如物理因素，你要画地图，知道世界怎么分布，海流怎么流，四季变化和阳光变化是怎样的，这就是一个新的创世纪。同时还要考虑宗教、哲学、种族和语言。</p>    
+    <h5>在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</h5>
+    </div>
+   <p class="img0">
+    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155516.jpg" height=700 title="尼伯龙根">
+    </p>
+    <h3 id="two">龙族语录精选</h3>
+    <div class="box">
+     <ul>
+    <li>浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</li>
 
+    <li>爱欲之人犹如执炬逆风而行，必有灼手之患 --江南 《龙族》</li>
 
+    <li>总有一些孤独，曾在我们左右；也总有一些孤独，离我们远去，让我们无从寻觅。<br/>一切都过去了，是的。阳光里，不会再有天使低下头来，亲吻你的脸。 --江南 《龙族》</li>
+    </ul>
+    </div>
+    <p class="img1">
+    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155449.jpg" width="500" title="路明泽与路明非">
+    </P>
+    <div class="box">
+    <ul>
+    <li>要活下去啊，哥哥，生命是我们拥有的……一切了！ --江南 《龙族》</li>
 
-    <img src="shiyu145.github.io/微信图片_20201005203719.jpg" class="1">
+     <li>可人不是断气的时候才真的死了。有人说人会死三次，第一次是他断气的时候 ，从生物学上他死了；第二次是他下葬的时候，人们来参加他的葬礼，怀念他的一生，然后在社会上他死了，不再会有他的位置；第三次是最后一个记得他的人把他忘记的时候，那时候他才真正的死了。--江南 《龙族》</li>
 
+     <li>有些路你和某人一起走，就长得离谱，你和另外一些人走，就短得让人舍不得迈开脚步。--江南 《龙族》</li>
 
+     <li>比孤独更可悲的事情，就是根本不知道自己很孤独，或者分明很孤独，却把自己都骗得相信自己不孤独。--江南 《龙族》</li>
+     </ul>
+     </div>
+     <p class="img2">
+      <img src="C:\Users\Lenovo\Desktop\web\img\微信图片_20201009155157.jpg">
+      </p>
+      <div class="box">
+      <ul>
+     <li>什么是死去？是终点，是诀别，是不可挽留， 是再也握不到的手，感觉不到的温度， 再也说不出口的“对不起”。--江南《龙族》</li>
 
-    <p class="1">浮生梦，三生渺渺，因缘无踪，虽堪恋，何必重逢。息壤生生，谁当逝水，东流无终。 --江南 《龙族》</p>
+     <li>我猜，只是猜，每个人的一生都会遇见某些人，喜欢上她。有些人在合适的时间里遇到，就像是在春天遇到花开，所以一切都很好，他们会相恋、订婚、结婚、一起生活。而有的人在错误的时间遇到 ，就像是在冬天，隔着冰看见浮上来换气的鱼，所以只能看着，鱼换完气，沉到水下去，就看不见了，再也没有后续。但是我们能说在春天遇到花是对的，而在冬天遇到鱼是错的么？在错误的时间里遇到，就能克制自己不喜欢那个人么？是不是仍然会用尽了力气想去接近，想尽办法掩饰自己，甚至伪装成另外一条鱼。--江南 《龙族》</li>
 
+    <li> 在这个世界的某个角落，必有为你而生的人，当你站在悬崖尽头时不要失去希望，要多坚持那么一秒钟，等那个人一骑绝尘如狂风闪电般出现在你面前，你将跨上他的马背，即便他是被所罗门囚禁了一千年的魔鬼。--江南 《龙族》</li>
+    </ul>
+    </div>
+    <p class="img3">
+    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155441.jpg">
+    </p>
+    <div class="box">
+    <ul>
 
+    <li>People come and go, we struggled with laughter and tears, and all the years have gone by,still Ihave you by my side.<br> 你陪了我多少年，花开花落。一路上起起跌跌。--江南 《龙族》</li>
 
-    <p class="1">爱欲之人犹如执炬逆风而行，必有灼手之患 --江南 《龙族》</p>
+    <li>喜欢一个人需要理由吗？需要吗？不需要吗？需要吗？不需要吗？这是个鬼知道天晓得的事情。本来你什么也不在乎，开开心心的、吃着火锅、坐着火车、唱着歌出了城......忽然间火车被人掀翻到水里了，你从水里钻了出来，睁眼看见一个细腰长腿一头长发的女土匪，一脚踩在你的脸上，威风凛凛，说此山是我开此树是我栽要想打此过留下买路财，若敢说个不字管杀不管埋！你心里一动，恨不得留下来和她一起当土匪......那个瞬间你就喜欢上她了呗。--江南 《龙族》</li>
 
-    <img src="shiyu145.github.io/微信图片_20201008183847.jpg" class="1">
+     <li>Let us across hell and reach to heaven！<br> 让我们穿越最深的地狱，然后直抵天堂！--江南《龙族》</li>
+      </ul>
+      </div>
+    <h3 id="three">龙族人物介绍</h3>
 
-    <p class="1">总有一些孤独，曾在我们左右；也总有一些孤独，离我们远去，让我们无从寻觅。一切都过去了，是的。阳光里，不会再有天使低下头来，亲吻你的脸。 --江南 《龙族》</p>
+      <table align="center" width="500" height="290" border="1" cellspacing="0">
+        <tr>
+          <th>人物</th>
+          <th>身份</th>
+          <th>言灵</th>
+          <th>血脉</th>
+        </tr>
+        <tr>
+          <td>路明非</td>
+          <td>主角</td>
+          <td>不要死</td>
+          <td>S级</td>
+        </tr>
+        <tr>
+          <td>路明泽</td>
+          <td>路明非的哥哥</td>
+          <td>疑似所有</td>
+          <td>龙王级</td>
+        </tr>
+        <tr>
+           <td>楚子航</td>
+           <td>狮心会会长</td>
+           <td>君焰</td>
+           <td>超A级</td>
+        </tr>
+        <tr>
+           <td>凯撒</td>
+           <td>学生会会长</td>
+           <td>镰鼬</td>
+           <td>A级</td>
+        </tr>
+        <tr>
+           <td>昂热</td>
+           <td>卡塞尔学院校长</td>
+           <td>时间零</td>
+           <td>S级</td>
+        </tr>
+      </table>
 
+    <h3 id="four">读者评价</h3>
+    <div class="box">
+       <p>由小城市走向大洋彼岸，平凡普通的生活突然变得精彩传奇，蔫小孩受到腰细腿长的御姐召唤，变成了日益成长的屠龙勇士。这个，就是《龙族》。而这个蔫主角路明非，其实就是江南内心所向往的生活。
+——沧月，中国青春作家，江南资深契妹，代表作《镜》系列、《羽》系列、《七夜雪》等。</p> 
+       <p>青春小说，从人物到故事，从构思到情感，从文字到感觉，都有着不小的变化。而像《龙族》这种集热血感、青春感、动漫风于一体的小说，算是一个创新。而《龙族》也是江南最具创新突破感的作品。
+——明晓溪，中国青春作家，代表作《烈火如歌》、《泡沫之夏》、《心之萌》等。</p> 
+     <p>《龙族》讲的，其实是一个关于“抗争”的主题，在那个世界里，精英分子在抗争，蔫小孩也在抗争；他们抗争压迫，抗争命运。但是最终却需要回到“热血成长”的主题，因为只有正义的抗争与热血的成长，才是让年轻人或兴奋或思考的理由。请让我们一起热血！
+——蔡骏，中国悬疑作家，代表作《天机》、《人间》、《地狱的第十九层》等。</p>  
+     <p>相比较《龙族Ⅰ》，《龙族Ⅱ》在故事技巧上更为成熟。一部青春幻想热血向的小说，却有着非常快的故事节奏与情节密度。快速切换的镜头，细腻华美的语言，独具匠心的细节，让这部小说拥有极为浓厚的阅读快感。从2010年成都书市出第一部开始，我追看了一年，我喜欢这本书。
+——南派三叔，中国悬疑小说家，代表作《盗墓笔记》等。</p>  
+　　　<p>《龙族Ⅱ》是一部在人物塑造上非常成功的小说。这些男孩与女孩在这部小说里慢慢地成长，学会了坚强、执著与爱。衰衰的路明非、孤独的楚子航、酷酷的恺撒，当然还有那些漂亮可爱的姑娘们——诺诺、夏弥、苏茜、陈雯雯、酒德麻衣……我和江南是邻居，我们经常在小区里散步讨论这些人物和命运。我也喜欢这本书。
+——唐家三少，中国网络文学作家，代表作《斗罗大陆》、《狂神》等。</p>  
+　　　  
+    <p>远古的神秘降临时尚的现代世界，古老的魔力与先进科技交相辉映，构成了令人惊叹的《龙族》，像初升的朝阳，那么古老，又那么崭新。从来没有想到科幻的神奇与奇幻的绚丽结合得如此完美，青春与热血激荡其间，温婉与雄奇并存，迸发出前所未有的光彩。对于年轻和曾经年轻过的人，这部史诗的魅力不可抗拒。
+——刘慈欣，著名科幻作家，代表作《三体》</p>  
+　　
 
-
-    <p class="1">要活下去啊，哥哥，生命是我们拥有的……一切了！ --江南 《龙族》</p>
-
-
-  <h1 class="1">啊这</h1>
-
-  <h2 class="1">为了我的学业，我先进行自我介绍</h2>
-
-
-  <h5 class="1">有缘千里来相会，正在看我的网站的人，大家好。我是李适宇，来自北京大学（能和江南同一所大学，我很骄傲）。我毕业于河南商城高中，一个地道的农村中学，其实这也是我第一次接触编程，感觉还是挺有意思的。</h5>
-
-    <p class="1">话说我为什么先在上面写上龙族语录呢？《龙族》这本书陪伴了我整个高中，其中的一些角色、话语一直在不断的激励着我前进，尤其是在最为困难的高三时期，我一直也在心中期待着那道光能照进我的心房。“你已经手握刀剑，那就准备战斗”······那些话语依旧历历在目。这也算是我的个人爱好吧。我希望能够将上面的龙族语录真正的大全，将那些让我激动人心的话语分享给大家。</p>
-
-
-
-    <h1 class="1">                                       再见</h1>
-
-
-
-
+     <p>青春小说《龙族》中不仅有精彩的冒险故事，还讲述了几个少年的成长。从初出茅庐到逐步走向新的世界，在他们身上展现了正义与勇气、友情与执著、热血与梦想。
+——王泉根，北京师范大学教授、博士生导师，中国儿童文学研究中心主任</p>
+    </div>
+  <p class="img4">
+  <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201011210841.jpg" height=600>
+   <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201011210853.jpg" height=600 title="这是我的微信，欢迎加朋友">
+   </p>
+   
     </body>
-
-
     </html>
