--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h5>在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</h5>
     </div>
    <p class="img0">
-    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155516.jpg" height=700 title="尼伯龙根">
+    <img src="web/微信图片_20201009155516.jpg" height=700 title="尼伯龙根">
     </p>
     <h3 id="two">龙族语录精选</h3>
     <div class="box">
@@ -42,7 +42,7 @@
     </ul>
     </div>
     <p class="img1">
-    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155449.jpg" width="500" title="路明泽与路明非">
+    <img src="web/微信图片_20201009155449.jpg" width="500" title="路明泽与路明非">
     </P>
     <div class="box">
     <ul>
@@ -56,7 +56,7 @@
      </ul>
      </div>
      <p class="img2">
-      <img src="C:\Users\Lenovo\Desktop\web\img\微信图片_20201009155157.jpg">
+      <img src="web/img/微信图片_20201009155157.jpg">
       </p>
       <div class="box">
       <ul>
@@ -68,7 +68,7 @@
     </ul>
     </div>
     <p class="img3">
-    <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201009155441.jpg">
+    <img src="web/微信图片_20201009155441.jpg">
     </p>
     <div class="box">
     <ul>
@@ -142,8 +142,8 @@
 ——王泉根，北京师范大学教授、博士生导师，中国儿童文学研究中心主任</p>
     </div>
   <p class="img4">
-  <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201011210841.jpg" height=600>
-   <img src="C:\Users\Lenovo\Desktop\web\微信图片_20201011210853.jpg" height=600 title="这是我的微信，欢迎加朋友">
+  <img src="web/微信图片_20201011210841.jpg" height=600>
+   <img src="web/微信图片_20201011210853.jpg" height=600 title="这是我的微信，欢迎加朋友">
    </p>
    
     </body>
