--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>龙族简介——李适宇的第一个网页</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="github.io/style.css">
   </head>
   <body><p class="p1">你现在正在看的是李适宇制作的第一个网页，在这里，我推荐一本书分享给大家。现在欢迎来到龙族的世界，在此你将开启传奇之旅</p>
    
