--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h5>在你最孤独最无望的时候，有一扇门会在你身边打开。谨以此书献给所有有梦想的孩子。</h5>
     </div>
    <p class="img0">
-    <img src="web/微信图片_20201009155516.jpg" height=700 title="尼伯龙根">
+    <img src="web/微信图片_20201009155516.jpg" width=700 title="尼伯龙根">
     </p>
     <h3 id="two">龙族语录精选</h3>
     <div class="box">
